--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html>
     <head>
         <title>Web Dev Page</title>
+        <link rel="stylesheet" href="./styles/styles.css" />
+
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+            rel="stylesheet"
+        />
+        <!-- ====================================== -->
     </head>
     <body>
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
+        <ul>
+            <li class="list"><a class="active" href="./index.html">Home</a></li>
+            <div class="dropdown">
+                <a>Lab1</a>
+                <div class="dropdown-content">
+                    <a href="./pages/lab1/lab1no1.html">lab1no1</a>
+                    <a href="./pages/lab1/lab1no2.html">lab1no2</a>
+                    <a href="./pages/lab1/lab1no3.html">lab1no3</a>
+                    <a href="./pages/lab1/lab1no4.html">lab1no4</a>
+                    <a
+                        href="./pages/lab1/weblab/lab1no5/web1/workshop1/index2.html"
+                        >lab1no5A - index2.html</a
+                    >
+                    <a
+                        href="./pages/lab1/weblab/lab1no5/web1/workshop2/classMonday/homework/exercise1.html"
+                        >lab1no5A - exercise1.html</a
+                    >
+                    <a href="./pages/lab1/weblab/lab1no5/web2/index.html"
+                        >lab1no5B</a
+                    >
+                </div>
+            </div>
+            <div class="dropdown">
+                <a>Lab2</a>
+                <div class="dropdown-content">
+                    <a href="./pages/lab2/lab2-1.html">lab2no1</a>
+                    <a href="./pages/lab2/lab2-2.html">lab2no2</a>
+                    <a href="./pages/lab2/lab2-3.html">lab2no3</a>
+                </div>
+            </div>
+        </ul>
+        <h1 style="text-align: center">6604062630463 นายรัชชานนท์ ทอดแสน</h1>
     </body>
 </html>
