--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="dropdown">
                 <a>Lab1</a>
                 <div class="dropdown-content">
-                    <a href="./pages/lab1/lab1no1.html">lab1no1</a>
+                    <a href="./cs6630463.github.io/pages/lab1/lab1no1.html">lab1no1</a>
                     <a href="./pages/lab1/lab1no2.html">lab1no2</a>
                     <a href="./pages/lab1/lab1no3.html">lab1no3</a>
                     <a href="./pages/lab1/lab1no4.html">lab1no4</a>
