--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
             </div>
         </ul>
         <h1 style="text-align: center">6604062630463 นายรัชชานนท์ ทอดแสน</h1>
+        <a href="/pages/lab1/Lab1no1.html">test link</a>
     </body>
 </html>
