--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             <div class="dropdown">
                 <a>Lab1</a>
                 <div class="dropdown-content">
-                    <a href="./pages/lab1/lab1no1.html">lab1no1</a>
-                    <a href="./pages/lab1/lab1no2.html">lab1no2</a>
-                    <a href="./pages/lab1/lab1no3.html">lab1no3</a>
-                    <a href="./pages/lab1/lab1no4.html">lab1no4</a>
+                    <a href="/pages/lab1/lab1no1.html">lab1no1</a>
+                    <a href="/pages/lab1/lab1no2.html">lab1no2</a>
+                    <a href="/pages/lab1/lab1no3.html">lab1no3</a>
+                    <a href="/pages/lab1/lab1no4.html">lab1no4</a>
                     <a
-                        href="./pages/lab1/weblab/lab1no5/web1/workshop1/index2.html"
+                        href="/pages/lab1/weblab/lab1no5/web1/workshop1/index2.html"
                         >lab1no5A - index2.html</a
                     >
                     <a
-                        href="./pages/lab1/weblab/lab1no5/web1/workshop2/classMonday/homework/exercise1.html"
+                        href="/pages/lab1/weblab/lab1no5/web1/workshop2/classMonday/homework/exercise1.html"
                         >lab1no5A - exercise1.html</a
                     >
-                    <a href="./pages/lab1/weblab/lab1no5/web2/index.html"
+                    <a href="/pages/lab1/weblab/lab1no5/web2/index.html"
                         >lab1no5B</a
                     >
                 </div>
@@ -39,9 +39,9 @@
             <div class="dropdown">
                 <a>Lab2</a>
                 <div class="dropdown-content">
-                    <a href="./pages/lab2/lab2-1.html">lab2no1</a>
-                    <a href="./pages/lab2/lab2-2.html">lab2no2</a>
-                    <a href="./pages/lab2/lab2-3.html">lab2no3</a>
+                    <a href="/pages/lab2/lab2-1.html">lab2no1</a>
+                    <a href="/pages/lab2/lab2-2.html">lab2no2</a>
+                    <a href="/pages/lab2/lab2-3.html">lab2no3</a>
                 </div>
             </div>
         </ul>
