--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="dropdown">
                 <a>Lab1</a>
                 <div class="dropdown-content">
-                    <a href="/pages/lab1/lab1no1.html">lab1no1</a>
-                    <a href="/pages/lab1/lab1no2.html">lab1no2</a>
-                    <a href="/pages/lab1/lab1no3.html">lab1no3</a>
-                    <a href="/pages/lab1/lab1no4.html">lab1no4</a>
+                    <a href="/pages/lab1/Lab1no1.html">lab1no1</a>
+                    <a href="/pages/lab1/Lab1no2.html">lab1no2</a>
+                    <a href="/pages/lab1/Lab1no3.html">lab1no3</a>
+                    <a href="/pages/lab1/Lab1no4.html">lab1no4</a>
                     <a
                         href="/pages/lab1/weblab/lab1no5/web1/workshop1/index2.html"
                         >lab1no5A - index2.html</a
