--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     </head>
     <body>
         <ul>
-            <li class="list"><a class="active" href="./index.html">Home</a></li>
-            <div class="dropdown">
-                <a>Lab1</a>
+            <li class="list">
+                <a class="active" href="./index.html">Home</a>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-header">Lab1+</a>
                 <div class="dropdown-content">
                     <a href="/pages/lab1/Lab1no1.html">lab1no1</a>
                     <a href="/pages/lab1/Lab1no2.html">lab1no2</a>
@@ -25,25 +27,39 @@
                     <a href="/pages/lab1/Lab1no4.html">lab1no4</a>
                     <a
                         href="/pages/lab1/weblab/lab1no5/web1/workshop1/index2.html"
-                        >lab1no5A - index2.html</a
                     >
+                        lab1no5A - index2.html
+                    </a>
                     <a
                         href="/pages/lab1/weblab/lab1no5/web1/workshop2/classMonday/homework/exercise1.html"
-                        >lab1no5A - exercise1.html</a
                     >
-                    <a href="/pages/lab1/weblab/lab1no5/web2/index.html"
-                        >lab1no5B</a
-                    >
+                        lab1no5A - exercise1.html
+                    </a>
+                    <a href="/pages/lab1/weblab/lab1no5/web2/index.html">
+                        lab1no5B
+                    </a>
                 </div>
-            </div>
-            <div class="dropdown">
-                <a>Lab2</a>
+            </li>
+            <li class="dropdown">
+                <a>Lab2+</a>
                 <div class="dropdown-content">
                     <a href="/pages/lab2/lab2-1.html">lab2no1</a>
                     <a href="/pages/lab2/lab2-2.html">lab2no2</a>
                     <a href="/pages/lab2/lab2-3.html">lab2no3</a>
                 </div>
-            </div>
+            </li>
+            <li class="dropdown">
+                <a>Lab3</a>
+                <div class="dropdown-content">
+                    <!-- <a href="/pages/lab2/lab2-1.html">lab2no1</a> -->
+                </div>
+            </li>
+            <li class="dropdown">
+                <a>Lab4</a>
+                <div class="dropdown-content">
+                    <!-- <a href="/pages/lab2/lab2-1.html">lab2no1</a> -->
+                </div>
+            </li>
         </ul>
         <h1 style="text-align: center">6604062630463 นายรัชชานนท์ ทอดแสน</h1>
     </body>
